# skeleton

./: .dockerignore  .env  .env.sample  .envrc  .gitignore  .mise.toml  Dockerfile  INSTALL.md  Makefile  README.md  TASKS.md  alembic.ini  entrypoint.sh  justfile  main.sh  packages.txt  pyproject.toml  supervisord.conf
.zed/: settings.json
app/: main.py
ci/: .pre-commit-config.yaml  .readthedocs.yaml  pyproject.global.toml  pyproject.toml
conf/: pre-commit.yaml  tool.toml
conf/lint/: flakeheaven.toml  lint.toml  ruff.toml  yamllint.yaml
docs/: conf.py
docs/project/: INSTALL.md
etc/: cron.yaml  pre-commit.yaml  read-the-docs.yaml  supervisord.conf  yacron.yaml
etc/lint/: .markdownlint-cli2.jsonc  flakeheaven.toml  mypy.toml  pyright.json  ruff.toml  yamlfix.toml  yamllint.yaml
migrations/: env.py
src/blank/: __init__.py  assets.py  loggers.py  logging.py  main.py  settings.py
