[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools"
]

[dependency-groups]
build = [
  "setuptools"
]
dev = [
  "pipdeptree>=2.24.0",
  "pre-commit>=4.0.1",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.4",
  "ruff>=0.8.3",
  "tomli>=2.2.1",
  "tomli_w>=1.1.0",
  "uv-publish>=1.2.0"
]
docs = [
  "sphinx-rtd-theme>=3.0.2",
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=2.5.0",
  "sphinx-rtd-dark-mode>=1.3.0"
]

[project]
name = "blank"
version = "0.0.0"
description = "Just blank"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Alex Kalaverin", email = "alex@kalaver.in" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://kalaver.in"

[tool.black]
extend = "ci/pyproject.toml"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend = "ci/pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = [
  "blank"
]
known-third-party = [
  "kalib"
]

[tool.setuptools]
packages = [
]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
default-groups = [
  "dev",
  "docs"
]
index-strategy = "unsafe-best-match"
package = true

[tool.yamlfix]
line_length = 89
preserve_quotes = false
quote_basic_values = false
quote_representation = "'"
section_whitelines = 1
sequence_style = "block_style"
whitelines = 1
