[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools"
]

[dependency-groups]
build = [
  "setuptools"
]
development = [
  "async-asgi-testclient>=1.4.11",
  "bandit[toml]>=1.8.6",
  "basedmypy>=2.10.0",
  "basedpyright>=1.32.1",
  "better-exceptions>=0.3.3",
  "black>=25.9.0",
  "hexora>=0.2.0",
  "pre-commit>=4.3.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "pytest-dotenv>=0.5.2",
  "pytest-mock>=3.15.1",
  "pytest>=8.4.2",
  "python-lsp-server[all]>=1.13.1",
  "refurb>=2.2.0",
  "ruff>=0.14.1",
  "ty>=0.0.1a24",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "vulture>=2.14",
  "yamlfix>=1.19.0",
  "yamllint>=1.37.1"
]
documentation = [
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-rtd-dark-mode>=1.3.0",
  "sphinx-rtd-theme>=3.0.2"
]

[project]
authors = [
  {name = "Alex Kalaverin", email = "alex@kalaver.in"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]
dependencies = [
  "orjson>=3.11.3",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
  "structlog>=25.4.0",
  "supervisor>=4.3.0",
  "yacron>=0.19.0",
]
description = "Blank"
name = "Blank"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.0.0"

[project.urls]
Homepage = "https://kalaver.in"

[tool.bandit]
exclude_dirs = [".venv", ".git"]

[tool.black]
line-length = 89
target-version = ["py312"]

[tool.refurb]
ignore = []

[tool.ruff]
extend = "etc/lint/ruff.toml"

[tool.ruff.lint.isort]
known-third-party = [
  "kain",
  "kalib"
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-project",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
local-project = ["Blank"]

[tool.ruff.lint.per-file-ignores]
"contrib/*" = []
"docs/*" = [
  "INP001",  # File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.
  "I001",  # [*] Import block is un-sorted or un-formatted
  "PTH100",  # `os.path.abspath()` should be replaced by `Path.resolve()`
  "A001"  # Variable `copyright` is shadowing a Python builtin
]
"migrations/*" = [
  "INP001",  # File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.
  "I001"  # [*] Import block is un-sorted or un-formatted
]
"src/*" = []
"tests/*" = []

[tool.setuptools]
packages = []

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
default-groups = [
  "development"
]

# [[tool.uv.index]]
# allow_insecure_host = "gitlab.my.domain"
# authenticate = "always"
# name = "custom"
# url = "https://gitlab.my.domain/index"
